@@ -16,11 +16,13 @@
 
 package org.gradle.integtests.resolve.api
 
+import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.AbstractHttpDependencyResolutionTest
-import org.gradle.integtests.fixtures.FluidDependenciesResolveRunner
-import org.junit.runner.RunWith
+import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
+import org.gradle.integtests.fixtures.extensions.FluidDependenciesResolveInterceptor
+import org.gradle.integtests.fixtures.extensions.FluidDependenciesResolveTest
 
-@RunWith(FluidDependenciesResolveRunner)
+@FluidDependenciesResolveTest
 class ArtifactCollectionIntegrationTest extends AbstractHttpDependencyResolutionTest {
 
     def setup() {
@@ -188,14 +190,19 @@ class Main {
                     assert artifacts.artifacts.size() == 3
                 }
             }
-"""
+        """
 
         when:
         succeeds "help"
+
+        if (JavaVersion.current().isJava9Compatible() && GradleContextualExecuter.isConfigCache()) {
+            // For java.util.concurrent.CopyOnWriteArrayList from DefaultMultiCauseException being serialized reflectively by configuration cache
+            executer.withArgument('-Dorg.gradle.jvmargs=--add-opens java.base/java.util.concurrent=ALL-UNNAMED')
+        }
         fails "verify"
 
         then:
-        if (FluidDependenciesResolveRunner.isFluid()) {
+        if (FluidDependenciesResolveInterceptor.isFluid()) {
             failure.assertHasDescription("Could not determine the dependencies of task ':verify'.")
             failure.assertHasCause("Could not resolve all task dependencies for configuration ':compile'.")
             failure.assertHasCause("Could not find org:does-not-exist:1.0.")
