@@ -16,6 +16,8 @@
 
 package org.gradle.smoketests
 
+import org.gradle.api.JavaVersion
+import org.gradle.testkit.runner.GradleRunner
 import spock.lang.Unroll
 
 class AnnotationProcessingSmokeTest extends AbstractSmokeTest {
@@ -24,11 +26,13 @@ class AnnotationProcessingSmokeTest extends AbstractSmokeTest {
     def 'project lombok works when options.fork=#fork'() {
         given:
         buildFile << """
-            apply plugin: 'java'
-            ${jcenterRepository()}
+            plugins {
+                id("java")
+            }
+            ${mavenCentralRepository()}
             dependencies {
-                compileOnly 'org.projectlombok:lombok:1.18.2'
-                annotationProcessor 'org.projectlombok:lombok:1.18.2'
+                compileOnly 'org.projectlombok:lombok:1.18.18'
+                annotationProcessor 'org.projectlombok:lombok:1.18.18'
             }
             compileJava.options.fork = $fork
         """
@@ -36,7 +40,7 @@ class AnnotationProcessingSmokeTest extends AbstractSmokeTest {
             import java.util.ArrayList;
             import java.util.HashMap;
             import lombok.val;
-            
+
             public class ValExample {
               public String example() {
                 val example = new ArrayList<String>();
@@ -44,7 +48,7 @@ class AnnotationProcessingSmokeTest extends AbstractSmokeTest {
                 val foo = example.get(0);
                 return foo.toLowerCase();
               }
-              
+
               public void example2() {
                 val map = new HashMap<Integer, String>();
                 map.put(0, "zero");
@@ -55,9 +59,13 @@ class AnnotationProcessingSmokeTest extends AbstractSmokeTest {
               }
             }
         """
+        GradleRunner gradleRunner = runner("compileJava")
+        if (JavaVersion.current().isJava9Compatible()) {
+            gradleRunner.withArguments("-Dorg.gradle.jvmargs=--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
+        }
 
         expect:
-        runner("compileJava").build()
+        gradleRunner.build()
 
         where:
         fork << [true, false]
