@@ -17,9 +17,11 @@
 package org.gradle.smoketests
 
 import groovy.json.JsonSlurper
+import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.ToBeFixedForConfigurationCache
 import org.gradle.internal.os.OperatingSystem
 import org.gradle.testkit.runner.BuildResult
+import org.gradle.util.GradleVersion
 
 class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
 
@@ -32,9 +34,8 @@ class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
         given:
         BuildResult result
         useSample("gmm-example")
-        // TODO Test Kotlin 1.4
-        def kotlinVersion = TestedVersions.kotlin.latestStartsWith("1.3")
-        def androidPluginVersion = AGP_VERSIONS.getLatestOfMinor("4.0")
+        def kotlinVersion = TestedVersions.kotlin.latestStartsWith("1.4")
+        def androidPluginVersion = AGP_VERSIONS.getLatestOfMinor("4.1")
         def arch = OperatingSystem.current().macOsX ? 'MacosX64' : 'LinuxX64'
 
         def expectedMetadata = new File(testProjectDir.root, 'expected-metadata')
@@ -91,13 +92,13 @@ class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
         ]
 
         when:
-        result = consumer('android-app:assembleFullDebug')
+        result = consumerWithJdk16WorkaroundForAndroidManifest('android-app:assembleFullDebug')
 
         then:
         trimmedOutput(result) == []
 
         when:
-        result = consumer('android-kotlin-app:assembleFullDebug')
+        result = consumerWithJdk16WorkaroundForAndroidManifest('android-kotlin-app:assembleFullDebug')
 
         then:
         trimmedOutput(result) == []
@@ -112,13 +113,24 @@ class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
         ]
     }
 
-    private List<String> trimmedOutput(BuildResult result) {
+    private static List<String> trimmedOutput(BuildResult result) {
         result.output.split('\n').findAll { !it.empty && !it.contains('warning') }
     }
 
     private BuildResult publish() {
-        runner('publish').withProjectDir(
-            new File(testProjectDir.root, 'producer')).forwardOutput().build()
+        runner('publish')
+            .withProjectDir(new File(testProjectDir.root, 'producer'))
+            .forwardOutput()
+            // expect legacy deprecation warnings because those are fixed in later versions of Android plugin
+            .expectLegacyDeprecationWarning("The AbstractCompile.destinationDir property has been deprecated. " +
+                "This is scheduled to be removed in Gradle 8.0. " +
+                "Please use the destinationDirectory property instead. " +
+                "Consult the upgrading guide for further information: https://docs.gradle.org/${GradleVersion.current().version}/userguide/upgrading_version_7.html#compile_task_wiring")
+            .expectLegacyDeprecationWarning("The WorkerExecutor.submit() method has been deprecated. " +
+                "This is scheduled to be removed in Gradle 8.0. " +
+                "Please use the noIsolation(), classLoaderIsolation() or processIsolation() method instead. " +
+                "See https://docs.gradle.org/${GradleVersion.current().version}/userguide/upgrading_version_5.html#method_workerexecutor_submit_is_deprecated for more details.")
+            .build()
     }
 
     private BuildResult consumer(String runTask) {
@@ -126,6 +138,16 @@ class ThirdPartyGradleModuleMetadataSmokeTest extends AbstractSmokeTest {
             new File(testProjectDir.root, 'consumer')).forwardOutput().build()
     }
 
+    // Reevaluate if this is still needed when upgrading android plugin. Currently required with version 4.1.2
+    private BuildResult consumerWithJdk16WorkaroundForAndroidManifest(String runTask) {
+        def runner = runner(runTask, '-q')
+            .withProjectDir(new File(testProjectDir.root, 'consumer'))
+            .forwardOutput()
+        if (JavaVersion.current().isJava9Compatible()) {
+            runner.withJvmArguments("--add-opens", "java.base/java.io=ALL-UNNAMED")
+        }
+        return runner.build()
+    }
 
     private static compareJson(File expected, File actual) {
         def actualJson = removeChangingDetails(new JsonSlurper().parseText(actual.text), actual.name)
